2005-09-14  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	Bug #3990: Require glproto in the cases that it's necessary (DRI or DMX
	with GLX).  (spyderous)

2005-09-14  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/Makefile.am:
	Bug #4046: Install the X.Org server setuid root. (David Schleef)

2005-09-14  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	Bug #3889: Create the log dir on install, and allow configuring
	specifically that directory.  Failure to have the directory keeps the
	xorg server from starting. (David Schleef)

2005-09-14  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/xf8_32bpp/Makefile.am:
	Don't put a version number on the module filename.

2005-09-14  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/loader/Makefile.am:
	* hw/xfree86/xf8_32bpp/Makefile.am:
	Build xf8_32bpp, which is wanted by the mga driver, and export elf.h,
	which is wanted by the rendition driver.

2005-09-13  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	* hw/xfree86/dri/Makefile.am:
	Turn on DRI by default on Linux, NetBSD, FreeBSD, and fix the build of
	the module for FreeBSD by setting some missing defines (XFree86Module,
	IN_MODULE) in the dri directory.  Note that those missing defines should
	be somewhere generic, since there are other consumers of them, but I
	haven't figured out where.

2005-09-13  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/os-support/bsd/Makefile.am:
	* include/dix-config.h.in:
	* include/xorg-config.h.in:
	* include/xorg-server.h.in:
	Add some initial BSD support for the xorg server.  Incomplete on NetBSD,
	OpenBSD, and non-i386/amd64 FreeBSD for sure.  Plus I haven't actually
	run it yet.

2005-09-12  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	Don't define POSIX_SOURCE on any BSDs, since it breaks things.

	* hw/xfree86/int10/Makefile.am: